syntax = "proto3";

package inventory.v1;

option java_multiple_files = true;
option java_package = "com.huragan11.inventory.grpc";
option java_outer_classname = "InventoryProto";

service InventoryService {
  rpc ReserveStock (ReserveStockRequest) returns (ReserveStockResponse);
}

message ReserveStockRequest {
  string orderId = 1;
  repeated StockItem items = 2;
}

message StockItem {
  string productId = 1;
  int32 quantity = 2;
}

message ReserveStockResponse {
  ReservationStatus status = 1;
}

enum ReservationStatus {
  RESERVATION_STATUS_UNSPECIFIED = 0;
  RESERVED = 1;
  OUT_OF_STOCK = 2;
}